--- a/css/base.css
+++ b/css/base.css
@@ -16,7 +16,7 @@ header { background: #a0a0a0; min-height: 80px; }
 /*block*/
 
 .center-block { min-height: 20px; text-align: center; }
-.bb-block { min-height: 400px; }
+.min-height { min-height: 500px; }
 
 /*buttons*/
 
@@ -26,6 +26,7 @@ header { background: #a0a0a0; min-height: 80px; }
 /*bullets*/
 
 ul { padding-left: 15px; }
+ul li { padding: 4px 0 4px 0; }
 
 /*colors*/
 
@@ -41,13 +42,13 @@ ul { padding-left: 15px; }
 
 /*top icon*/
 
-.top { position: fixed; bottom: 20px; right: 20px; cursor: pointer; color: #666; }
+.top-arrow { position: fixed; bottom: 20px; right: 20px; cursor: pointer; color: #666; }
 
 @media (max-width: 680px) {
 
-	.bb { min-height: 320px; }
 	.float-right { float: none; }
 	.button { width: 100%; }
-	.top { display: none; }
+	.top-arrow, .hide-mobile { display: none; }
+	.min-height { min-height: 360px; }
 
 } 
