--- a/css/grid.css
+++ b/css/grid.css
@@ -14,12 +14,18 @@ a img { border: 0; outline: none; }
   box-sizing: border-box;
 }
 
-[class*='col-'] { display: flex; flex-direction: column; justify-content: center; }
+[class*='col-'] { }
+.col-flex-column { display: flex; flex-direction: column; justify-content: center; }
+.col-flex-row { display: flex; flex-direction: row; justify-content: flex-end; align-items: center; }
 
+.col-1-1, .col-2-2, .col-3-3, .col-4-4, .col-5-5 { width: 100%; }
 .col-1-2 { width: 50%; }
-.col-1-1 { width: 100%; }
 .col-1-3 { width: 33.33%; }
 .col-2-3 { width: 66.7%; }
+.col-1-5 { width: 20%; }
+.col-2-5 { width: 40%; }
+.col-3-5 { width: 60%; }
+.col-4-5 { width: 80%; }
 
 @media (max-width: 680px) {
 
