--- a/css/base.css
+++ b/css/base.css
@@ -2,10 +2,13 @@ body { font-family: 'Libre Baskerville', serif; }
 
 /*navbar*/
 
-header { background: #a0a0a0; }
+header { background: white; }
+header .row { min-height: 100px; }
 .navbar a { padding: 10px; }
-.navbar .col-flex-row { padding-right: 30px; }
-.logo { width: 280px; padding: 20px; }
+.navbar .col-1-5 { justify-content: flex-start; }
+.navbar .col-4-5 { padding-right: 30px; }
+.navbar .col-4-5 { justify-content: flex-end; }
+.logo { width: 280px; padding: 10px 20px; }
 .fa-bars { display: none; }
 
 /*padding*/
@@ -19,12 +22,12 @@ header { background: #a0a0a0; }
 
 /*block*/
 
-.center-block { min-height: 20px; text-align: center; }
+.center-block { min-height: 100px; text-align: center; }
 .min-height { min-height: 500px; }
 
 /*buttons*/
 
-.button { display: inline-block; padding: 15px 25px; background: #666; color: white; text-decoration: none; }
+.button { display: inline-block; padding: 15px 25px; color: white; text-decoration: none; }
 .link { color: black; text-decoration: none; }
 
 /*bullets*/
@@ -32,11 +35,21 @@ header { background: #a0a0a0; }
 ul { padding-left: 15px; }
 ul li { padding: 4px 0 4px 0; }
 
-/*colors*/
+/*bg colors*/
 
-.grey-dk { background-color: #e1e1e1; }
-.grey-md { background-color: #e8e8e8; }
-.grey-lt { background-color: #f2f2f2; }
+.bg-grey-dk { background-color: #e1e1e1; }
+.bg-grey-md { background-color: #e8e8e8; }
+.bg-grey-lt { background-color: #f2f2f2; }
+
+.bg-blue-vivid { background-color: #2594ba; }
+.bg-blue-vivid-lt { background-color: #EFF6FF; }
+
+.bg-green-dk { background-color: #439474; }
+.bg-green-lt { background-color: #c3dcd2; }
+
+/*fg colors*/
+
+.fg-white { color: white; }
 
 /*bb backgrounds*/
 
@@ -52,15 +65,20 @@ ul li { padding: 4px 0 4px 0; }
 
 .top-arrow { position: fixed; bottom: 20px; right: 20px; cursor: pointer; color: #666; }
 
+/*disclaimer*/
+
+p.disclaimer { font-size: 0.8em; padding: 30px; text-align: center; }
+
 /*navbar media query*/
 
 @media (max-width: 800px) {
 
+	header .row { min-height: 0; }
 	.navbar .col-1-5 { width: 100%; }
 	.navbar .col-4-5 { display: none; }
 	.navbar:after { content: ""; display: table; clear: both; }
 	.logo { width: 220px; }
-	.fa-bars { display: block; position: absolute; top: 32px; right: 20px; }
+	.fa-bars { display: block; position: absolute; top: 22px; right: 20px; }
 } 
 
 
