--- a/css/base.css
+++ b/css/base.css
@@ -3,12 +3,12 @@ body { font-family: 'Libre Baskerville', serif; }
 /*navbar*/
 
 header { background: white; }
-header .row { min-height: 100px; }
-.navbar a { padding: 10px; }
-.navbar .col-1-5 { justify-content: flex-start; }
+header .row { height: 100px; }
+.navbar .link { padding: 10px; display: inline; }
+.navbar .col-1-5 { justify-content: flex-start; } 
 .navbar .col-4-5 { padding-right: 30px; }
 .navbar .col-4-5 { justify-content: flex-end; }
-.logo { width: 280px; padding: 10px 20px; }
+.logo { padding: 10px 20px; }
 .fa-bars { display: none; }
 
 /*padding*/
@@ -30,8 +30,9 @@ header .row { min-height: 100px; }
 
 .button { display: inline-block; padding: 15px 25px; color: white; text-decoration: none; background-color: #2594ba; transition: background-color .3s; }
 .button:hover { background-color: #ff8d00; }
-.link { color: #2594ba; text-decoration: none; font-weight: bold; transition: color .3s; align-self: flex-start; }
+.link { color: #2594ba; text-decoration: none; font-weight: bold; transition: color .3s; }
 .link:hover { color: #ff8d00; }
+.link-flex { align-self: flex-start; }
 
 /*bullets*/
 
@@ -82,12 +83,12 @@ p.disclaimer { font-size: 0.8em; padding: 30px; margin: 0; text-align: center; }
 
 @media (max-width: 800px) {
 
-	header .row { min-height: 0; }
+	header .row { height: auto; }
 	.navbar .col-1-5 { width: 100%; }
 	.navbar .col-4-5 { display: none; }
 	.navbar:after { content: ""; display: table; clear: both; }
 	.logo { width: 220px; }
-	.fa-bars { display: block; position: absolute; top: 22px; right: 20px; }
+	.fa-bars { display: block; position: absolute; top: 19px; right: 20px; }
 } 
 
 
