--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,5 @@
 body { font-family: 'Libre Baskerville', serif; }
+.hide-desktop { display: none; }
 
 /*navbar*/
 
@@ -16,8 +17,8 @@ header .row { height: 100px; }
 /*mobile links*/
 
 .mobile-links { height: 0; text-align: center; padding: 0; transition: all .3s; }
-.mobile-links a { display: block; padding: 10px; font-size: 1.2em; }
-.open { height: 220px; }
+.mobile-links a { display: block; padding: 15px; font-size: 1.2em; }
+.open { height: 290px; }
 
 /*padding*/
 
@@ -64,6 +65,7 @@ ul li { padding: 4px 0 4px 0; }
 
 .fg-white { color: white; }
 .fg-orange { color: #ff8d00; }
+.fg-blue-vivid { color: #2594ba; }
 
 /*bb backgrounds*/
 
@@ -90,10 +92,13 @@ ul li { padding: 4px 0 4px 0; }
 /*disclaimer*/
 
 p.disclaimer { font-size: 0.8em; padding: 30px; margin: 0; text-align: center; }
+span.disclaimer { font-size: 0.8em; display: block; margin-top: 10px; }
 
 /*forms*/
 
-form input { width: 100%; min-height: 40px; margin: 5px; padding: 5px; font-size: 1em; font-family: 'Libre Baskerville', serif; border: 1px solid #d7d7d7; }
+form input { width: 100%; margin: 5px 0 5px 0; padding: 10px; font-size: .9em; font-family: 'Libre Baskerville', serif; border: 1px solid #d7d7d7; }
+form input:last-of-type { margin-bottom: 10px; }
+form input:required { border-color: #AAD4E2; }
 
 /*navbar media query*/
 
@@ -114,6 +119,7 @@ form input { width: 100%; min-height: 40px; margin: 5px; padding: 5px; font-size
 	.float-right { float: none; }
 	.button { width: 100%; }
 	.hide-mobile { display: none; }
+	.hide-desktop { display: block; }
 	.min-height { min-height: 280px; }
 	.pad-lg { padding: 2em; }
 	.center-block-lg { min-height: 100px; }
