--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,5 @@
 body { font-family: 'Libre Baskerville', serif; }
+footer { min-height: 100px; }
 h2 { font-size: 1.8em; line-height: 1.6em; }
 p { line-height: 1.8em; }
 li { line-height: 1.4em; }
@@ -22,6 +23,7 @@ header .row { height: 100px; }
 .mobile-links { height: 0; text-align: center; padding: 0; transition: all .3s; }
 .mobile-links a { display: block; padding: 15px; font-size: 1.2em; }
 .open { height: 290px; }
+.fg-white a { color: white; }
 
 /*padding*/
 
@@ -84,6 +86,9 @@ ul li { padding: 4px 0 4px 0; }
 .bb-facilities01 { background-image: url(../img/bb-facilities01.jpg); }
 .bb-facilities02 { background-image: url(../img/bb-facilities02.jpg); }
 
+.bb-providers01 { background-image: url(../img/bb-providers01.jpg); }
+.bb-providers02 { background-image: url(../img/bb-providers02.jpg); }
+
 /*images*/
 
 .responsive-img { display: block; width: 100%; }
@@ -100,9 +105,15 @@ span.disclaimer { font-size: 0.8em; display: block; margin-top: 10px; }
 
 /*forms*/
 
-form input { width: 100%; margin: 5px 0 5px 0; padding: 10px; font-size: .9em; font-family: 'Libre Baskerville', serif; border: 1px solid #d7d7d7; -webkit-appearance: none; -webkit-border-radius: 0px; }
-form input:last-of-type { margin-bottom: 10px; }
-/* form input:required { border-color: #AAD4E2; } */
+form input, form textarea { width: 100%; margin: 5px 0 5px 0; padding: 10px; font-size: .9em; font-family: 'Libre Baskerville', serif; border: 1px solid #d7d7d7; -webkit-appearance: none; -webkit-border-radius: 0px; }
+form input:last-of-type, form textarea:last-of-type { margin-bottom: 10px; }
+input[type="text"][required] {
+  background-image: radial-gradient(#ff8d00 15%, transparent 16%), radial-gradient(#ff8d00 15%, transparent 16%);
+  background-size: 1.4em 1.4em;
+  background-position: top right;
+  background-repeat: no-repeat
+}
+form textarea { min-height: 100px; }
 
 /*thanks*/
 .thanks { display: none; }
