--- a/css/base.css
+++ b/css/base.css
@@ -83,6 +83,7 @@ ul li { padding: 4px 0 4px 0; }
 .bb-providers02 { background-image: url(../img/bb-providers02.jpg); }
 
 .bb-contact01 { background-image: url(../img/bb-contact01.jpg); }
+.bb-contact02 { background-image: url(../img/bb-contact02.jpg); }
 
 /*images*/
 
@@ -113,7 +114,7 @@ form textarea { min-height: 100px; }
 
 /*thanks*/
 .thanks { display: none; }
-.spinner { display: none; position: fixed; padding: 20px; background: white; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index: 100; border-radius: 20px; border: 10px solid #d7d7d7; }
+.spinner { display: none; position: fixed; padding: 20px; background: white; left: 50%; top: 50%; transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%); z-index: 100; border-radius: 20px; border: 10px solid #d7d7d7; }
 
 /*navbar media query*/
 
